// Generated by ReScript, PLEASE EDIT WITH CARE
'use strict';

var Jest = require("@glennsl/bs-jest/src/jest.bs.js");
var React = require("react");
var DynamicInput = require("../../src/Components/DynamicInput.bs.js");
var ReactTestingLibrary = require("@rescriptbr/react-testing-library/src/ReactTestingLibrary.bs.js");

Jest.describe("DynamicInputComponent", (function (param) {
        Jest.test("snapshot to match expected", (function (param) {
                return Jest.Expect.toMatchSnapshot(Jest.Expect.expect(ReactTestingLibrary.render(undefined, undefined, undefined, undefined, undefined, React.createElement(DynamicInput.make, {
                                        field: {
                                          name: "password",
                                          required: true,
                                          type: "password",
                                          value: ""
                                        }
                                      })).container));
              }));
        return Jest.test("snapshot to match expected", (function (param) {
                      return Jest.Expect.toMatchSnapshot(Jest.Expect.expect(ReactTestingLibrary.render(undefined, undefined, undefined, undefined, undefined, React.createElement(DynamicInput.make, {
                                              field: {
                                                name: "password",
                                                required: true,
                                                type: "hidden",
                                                value: ""
                                              }
                                            })).container));
                    }));
      }));

/*  Not a pure module */
